sbaserver/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping
  labels:
    name: shopping
