sbaserver/sbaadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shopping
  name: sbaadmin-pod
  labels:
    app: sbaadmin
    type: spring-boot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sbaadmin
    spec:
      serviceAccountName: sbaadmin
      containers:
        - image: localhost:32000/sbaserver:latest
          name: sbaserver
          ports:
            - containerPort: 8080
            - containerPort: 9080
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9080
            initialDelaySeconds: 80
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9080
            initialDelaySeconds: 80
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: sbaadmin
