sbaserver/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: admin-pod
  labels:
    app: sbaadmin
    type: spring-boot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sbaadmin
    spec:
      serviceAccountName: sbaadmin
      containers:
        - image: localhost:32000/sbaadmin:registry
          imagePullPolicy: Never
          name: sbaadmin
          ports:
            - containerPort: 8080
          resources: {}
          readinessProbe:
            httpGet:
              path: sbaadmin/actuator/health
              port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: sbaadmin/actuator/health
              port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: sbaadmin
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: sbaadmin-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: sbaadmin
