sbaserver/sbaadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: shopping
  name: sbaadmin-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
    - name: "management"
      port: 9080
      targetPort: 9080
  selector:
    app: sbaadmin
