sbaserver/ingress-sbaadmin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: sbaadmin-service
    servicePort: 8080
