sbaserver/sbaadmin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shopping-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: shopping-demo.info
      http:
        paths:
          - path: /
            backend:
              serviceName: sbaadmin-service
              servicePort: 8080
